--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,9 +16,64 @@ variables:
     value: "$(Build.SourcesDirectory)/terraform/azure"
 
 stages:
+  - stage: BuildReact
+    displayName: Build React Application
+    jobs:
+      - job: BuildReact
+        displayName: Build Next.js Application
+        pool:
+          vmImage: "ubuntu-latest"
+        steps:
+          - task: NodeTool@0
+            inputs:
+              versionSpec: "20.x"
+            displayName: "Install Node.js"
+
+          - task: Npm@1
+            displayName: "Install Dependencies"
+            inputs:
+              command: "install"
+              workingDir: "$(Build.SourcesDirectory)"
+
+          - task: Npm@1
+            displayName: "Build Next.js Application"
+            inputs:
+              command: "custom"
+              workingDir: "$(Build.SourcesDirectory)"
+              customCommand: "run build"
+
+          - task: PublishBuildArtifacts@1
+            displayName: "Publish Build Artifacts"
+            inputs:
+              PathtoPublish: "$(Build.SourcesDirectory)/.next"
+              ArtifactName: "next-build"
+              publishLocation: "Container"
+
+  - stage: BuildDocker
+    displayName: Build and Push Docker
+    dependsOn: BuildReact
+    jobs:
+      - job: BuildDocker
+        displayName: Build and Push Docker Image
+        pool:
+          vmImage: "ubuntu-latest"
+        steps:
+          - task: Docker@2
+            displayName: Build and Push
+            inputs:
+              containerRegistry: |
+                type: ACR
+                name: $(acr_name)
+              repository: $(app_name)
+              command: buildAndPush
+              Dockerfile: $(dockerfilePath)
+              tags: |
+                $(tag)
+                latest
+
   - stage: Terraform
     displayName: Terraform Deployment
-    dependsOn: Build
+    dependsOn: BuildDocker
     jobs:
       - job: Terraform
         displayName: Deploy Infrastructure
@@ -69,27 +124,7 @@ stages:
               script: |
                 cd $(terraformDirectory)
                 terraform apply -auto-approve tfplan
-  - stage: Build
-    displayName: Build and Push
-    jobs:
-      - job: Build
-        displayName: Build and Push Docker Image
-        pool:
-          vmImage: "ubuntu-latest"
-        steps:
-          - task: Docker@2
-            displayName: Build and Push
-            inputs:
-              containerRegistry: |
-                type: ACR
-                name: $(acr_name)
-              repository: $(app_name)
-              command: buildAndPush
-              Dockerfile: $(dockerfilePath)
-              tags: |
-                $(tag)
-                latest
-                
+
   - stage: Deploy
     displayName: Deploy to AKS
     dependsOn: Terraform
