--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.1",
+    "@heroicons/react": "^2.2.0",
     "@react-icons/all-files": "^4.1.0",
     "and": "^0.0.3",
     "autoprefixer": "^10.4.17",
     "build": "^0.1.4",
     "critters": "^0.0.25",
-    "framer-motion": "^11.0.3",
+    "framer-motion": "^11.18.2",
     "next": "^14.2.28",
+    "openai": "^4.96.2",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
