--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "build": "^0.1.4",
     "critters": "^0.0.25",
     "framer-motion": "^11.18.2",
+    "googleapis": "^148.0.0",
     "next": "^14.2.28",
     "openai": "^4.96.2",
     "postcss": "^8.4.35",
+    "razorpay": "^2.9.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^5.0.0",
